--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,8 @@ main {
   width: 100%;
   min-height: 100vh;
   height: auto;
-  background-image: url(./images/bg.gif);
+  // background-image: url(./images/bg.gif);
+  background-color: $bg;
   overflow-x: hidden;
   & .main-container {
     width: 80%;
@@ -24,6 +25,9 @@ main {
     }
     @import "./sass/components/header";
     @import "./sass/components/searchBar";
+    @import "./sass/components/sidebar";
+    @import "./sass/components/topRated";
+    @import "./sass/components/movieList";
     @import "./sass/pages/home";
   }
 }
