--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -11,6 +11,7 @@
     height: 70%;
 
     & .logo-container {
+      @include position;
       width: 20%;
       height: 100%;
       cursor: pointer;
@@ -20,6 +21,14 @@
       & img {
         width: 100%;
         height: 100%;
+      }
+      & h1{
+        font-size: 34px;
+        color: white;
+        & span{
+          color: $secondary;
+          font-size: 20px;
+        }
       }
     }
 
