--- a/src/sass/components/_searchBar.scss
+++ b/src/sass/components/_searchBar.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 7vh;
   background-color: transparent;
-  border: 3px solid $bg;
+  border: 2px solid $bgsm;
   @include sm {
     height: 10vh;
   }
