--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -1,32 +1,40 @@
 & .sliders {
   margin-top: 18vh;
   height: 60vh;
-
+  width: 100%;
   @include sm {
-    height: 80vh;
-    margin-top: 8vh;
+    height: 90vh;
+    width: 110%;
+    margin-top: 10vh;
   }
   & .slider {
-    position: relative;
+    @include position(flex-end, center);
     height: 60vh;
     background-position: center;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
-    padding: 20px;
+
+    margin: 0 5px;
     @include sm {
-      height: 80vh;
+      height: 90vh;
+      margin: 0;
     }
     & .slider-container {
-      position: absolute;
-      bottom: 10px;
-      width: 85%;
-      height: auto;
+      @include position(_, space-between, column);
+      width: 100%;
+      height: 35%;
+      padding: 0 10px;
+      padding-top: 5px;
+      backdrop-filter: blur(10px);
 
       & .type {
-        height: 50px;
+        width: 100%;
+        height: 20%;
 
         & span {
-          padding: 5px 10px;
+          @include position;
+          height: 100%;
+          width: 40%;
           border-radius: 20px;
           color: white;
           background-color: $secondary;
@@ -37,20 +45,40 @@
     & ul.genres {
       display: flex;
       width: 100%;
+      height: 55%;
       flex-wrap: wrap;
       padding: 0;
       list-style-type: none;
+
+      overflow: hidden;
       & li {
-        padding: 3px 6px;
+        height: 15px;
+        padding: 2px 5px;
+        font-size: 11px;
         border-radius: 5px;
         margin: 0 10px;
-        margin-bottom: 10px;
+        margin-bottom: 5px;
         color: white;
+        &:hover {
+          transform: scale(1.2);
+          transition: 0.3s;
+        }
       }
     }
     & h2 {
-      text-transform: uppercase;
+      font-size: 25px;
+      height: 19%;
+      text-transform: capitalize;
       color: white;
+      overflow: hidden;
+      @include md {
+        font-size: 20px;
+      }
+      &:hover {
+        color: $secondary;
+        transition: 0.3s;
+        cursor: pointer;
+      }
     }
   }
 }
