--- a/src/App.scss
+++ b/src/App.scss
@@ -27,6 +27,7 @@ main {
     @import "./sass/components/topRated";
     @import "./sass/components/movieList";
     @import "./sass/components/videoGrid";
+    @import "./sass/components/advert";
     @import "./sass/pages/home";
   }
 }
