--- a/src/App.css
+++ b/src/App.css
@@ -809,35 +809,98 @@ main .main-container .movieList .movieList-desc-container span.year {
 main .main-container .videos-container {
   width: 100%;
   height: auto;
+}
+
+main .main-container .videos-container .paginate {
+  width: 100%;
+  height: auto;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(200px, 31%))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(200px, 31%));
-  gap: 3.5%;
+  -webkit-column-gap: 3.5%;
+          column-gap: 3.5%;
 }
 
 @media (max-width: 1250px) {
-  main .main-container .videos-container {
+  main .main-container .videos-container .paginate {
     -ms-grid-columns: (minmax(100px, 32%))[auto-fit];
         grid-template-columns: repeat(auto-fit, minmax(100px, 32%));
-    gap: 2%;
+    -webkit-column-gap: 2%;
+            column-gap: 2%;
   }
 }
 
 @media (max-width: 1000px) {
-  main .main-container .videos-container {
+  main .main-container .videos-container .paginate {
     -ms-grid-columns: (minmax(100px, 48.5%))[auto-fit];
         grid-template-columns: repeat(auto-fit, minmax(100px, 48.5%));
-    gap: 3%;
+    -webkit-column-gap: 3%;
+            column-gap: 3%;
   }
 }
 
 @media (max-width: 500px) {
-  main .main-container .videos-container {
+  main .main-container .videos-container .paginate {
     -ms-grid-columns: (minmax(200px, 100%))[auto-fit];
         grid-template-columns: repeat(auto-fit, minmax(200px, 100%));
-    gap: 0;
   }
+}
+
+main .main-container .videos-container .paginate-btn-container {
+  height: 50px;
+  width: 100%;
+}
+
+main .main-container .videos-container .paginate-btn-container .paginationBtn {
+  display: block;
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  list-style-type: none;
+  padding: 0;
+}
+
+main .main-container .videos-container .paginate-btn-container .paginationBtn li {
+  color: #dd003f;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 0 10px;
+  cursor: pointer;
+  border: 1px solid #dd003f;
+}
+
+main .main-container .videos-container .paginationBtn li:hover {
+  color: white;
+  background-color: #dd003f;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+main .main-container .videos-container .paginationActive {
+  color: white;
+  background-color: #dd003f;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+main .main-container .videos-container .paginationActive a {
+  color: white;
+}
+
+main .main-container .videos-container .paginationDisabled {
+  color: #dd003f;
+  border: 1px solid #dd003f;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 main .main-container .videos-container .singleVideo {
@@ -845,6 +908,7 @@ main .main-container .videos-container .singleVideo {
   background-color: #233a50;
   -webkit-box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
           box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+  margin-bottom: 10vh;
 }
 
 @media (max-width: 500px) {
@@ -949,6 +1013,44 @@ main .main-container .videos-container .singleVideo .singleVideo-desc-container 
 
 main .main-container .videos-container .singleVideo .singleVideo-desc-container .desc-rest span.year {
   color: #dd003f;
+}
+
+main .main-container .sideAdvert {
+  width: 100%;
+  margin-bottom: 10vh;
+}
+
+main .main-container .sideAdvert .sideAdvert-head {
+  width: 100%;
+  height: 5vh;
+}
+
+main .main-container .sideAdvert .sideAdvert-body {
+  width: 100%;
+  height: auto;
+}
+
+main .main-container .sideAdvert .sideAdvert-body img {
+  width: 100%;
+}
+
+main .main-container .longAdvert {
+  width: 100%;
+  margin-bottom: 10vh;
+}
+
+main .main-container .longAdvert .longAdvert-head {
+  width: 100%;
+  height: 5vh;
+}
+
+main .main-container .longAdvert .longAdvert-body {
+  width: 100%;
+  height: auto;
+}
+
+main .main-container .longAdvert .longAdvert-body img {
+  width: 100%;
 }
 
 main .main-container .home {
@@ -1125,7 +1227,6 @@ main .main-container .home .home-main-container {
   margin-top: 100px;
   width: 100%;
   height: auto;
-  border: 1px solid red;
 }
 
 @media (max-width: 500px) {
@@ -1145,6 +1246,7 @@ main .main-container .home .home-main-container .home-main-container-main {
 @media (max-width: 500px) {
   main .main-container .home .home-main-container .home-main-container-main {
     width: 100%;
+    margin-bottom: 15vh;
   }
 }
 
