--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import "./sass/scssComponents/variables";
+@import "./sass/components/animation";
 
 * {
   margin: 0;
@@ -15,6 +16,8 @@ main {
   height: auto;
   background-color: $bg;
   overflow-x: hidden;
+  transition: 1s ease-out;
+  // scroll-behavior: smooth;
   & .main-container {
     width: 80%;
     height: auto;
@@ -29,5 +32,6 @@ main {
     @import "./sass/components/videoGrid";
     @import "./sass/components/advert";
     @import "./sass/pages/home";
+    @import "./sass/components/footer";
   }
 }
